<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.ippon.occ</groupId>
    <artifactId>reverse-polish-notation-zip</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>Reverse Polish Notation.zip</name>
    <url>https://code.ippon.fr</url>
    <properties>
        <skipTests>true</skipTests>
    </properties>
    <dependencies>
        <dependency>
            <groupId>fr.ippon.occ</groupId>
            <artifactId>sandbox</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/coding-sandbox-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
        </dependency>
    </dependencies>
    <build>
        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <workingDirectory>${project.basedir}/target/test-classes</workingDirectory>
                    <arguments>
                        <argument>-classpath</argument>
                        <argument>${project.basedir}/target/test-classes/:${project.basedir}/target/classes/:${project.basedir}/lib/coding-sandbox-1.0-SNAPSHOT-jar-with-dependencies.jar</argument>
                        <argument>-DlibraryJar.location=${project.basedir}/lib/coding-sandbox-1.0-SNAPSHOT-jar-with-dependencies.jar</argument>
                        <argument>-Dsandbox.dir=${project.basedir}/target/test-classes/work</argument>
                        <argument>-Djava.security.manager</argument>
                        <argument>-Djava.security.policy=sandbox.policy</argument>
                        <argument>fr.ippon.occ.utils.TestExecutor</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>